added site_name in href of anchor tag

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,10 @@
   </head>
   <body>
     <div style="display: flex; justify-content: space-between">
-      <a href="/index.html">home</a>
-      <a href="/contact.html">contact</a>
-      <a href="/services.html">services</a>
-      <a href="/about.html">about</a>
+       <a href="%SITE_NAME%/index.html">home</a>
+      <a href="%SITE_NAME%/contact.html">contact</a>
+      <a href="%SITE_NAME%/services.html">services</a>
+      <a href="%SITE_NAME%/about.html">about</a>
     </div>
     <h1>Contact Page</h1>
   </body>
