delete env variable

--- a/contact.html
+++ b/contact.html
@@ -5,10 +5,14 @@
   </head>
   <body>
     <div style="display: flex; justify-content: space-between">
-       <a href="%SITE_NAME%/index.html">home</a>
-      <a href="%SITE_NAME%/contact.html">contact</a>
-      <a href="%SITE_NAME%/services.html">services</a>
-      <a href="%SITE_NAME%/about.html">about</a>
+      <a href="https://imran660.github.io/static-website/index.html">home</a>
+      <a href="https://imran660.github.io/static-website/contact.html"
+        >contact</a
+      >
+      <a href="https://imran660.github.io/static-website/services.html"
+        >services</a
+      >
+      <a href="https://imran660.github.io/static-website/about.html">about</a>
     </div>
     <h1>Contact Page</h1>
   </body>
